# docs/nodeDocs/controllers/Precios.js
@@ -1,10 +1,10 @@
 'use strict';
 
 var utils = require('../utils/writer.js');
-var MasaTipo = require('../service/MasaTipoService');
+var Precios = require('../service/PreciosService');
 
-module.exports.createMasaTipo = function createMasaTipo (req, res, next, body) {
-  MasaTipo.createMasaTipo(body)
+module.exports.createPrecios = function createPrecios (req, res, next, body) {
+  Precios.createPrecios(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -13,8 +13,8 @@ module.exports.createMasaTipo = function createMasaTipo (req, res, next, body) {
     });
 };
 
-module.exports.deleteMasaTipo = function deleteMasaTipo (req, res, next, body, id) {
-  MasaTipo.deleteMasaTipo(body, id)
+module.exports.deletePrecios = function deletePrecios (req, res, next, body, id) {
+  Precios.deletePrecios(body, id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -23,8 +23,8 @@ module.exports.deleteMasaTipo = function deleteMasaTipo (req, res, next, body, i
     });
 };
 
-module.exports.editMasaTipo = function editMasaTipo (req, res, next, id) {
-  MasaTipo.editMasaTipo(id)
+module.exports.editPrecios = function editPrecios (req, res, next, id) {
+  Precios.editPrecios(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -33,8 +33,8 @@ module.exports.editMasaTipo = function editMasaTipo (req, res, next, id) {
     });
 };
 
-module.exports.getMasaTipo = function getMasaTipo (req, res, next) {
-  MasaTipo.getMasaTipo()
+module.exports.getPrecioById = function getPrecioById (req, res, next, id) {
+  Precios.getPrecioById(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -43,8 +43,8 @@ module.exports.getMasaTipo = function getMasaTipo (req, res, next) {
     });
 };
 
-module.exports.getMasaTipoById = function getMasaTipoById (req, res, next, id) {
-  MasaTipo.getMasaTipoById(id)
+module.exports.getPrecios = function getPrecios (req, res, next) {
+  Precios.getPrecios()
     .then(function (response) {
       utils.writeJson(res, response);
     })
